--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title= title
+    script(src='//code.jquery.com/jquery-2.1.3.min.js')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
