--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,15 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    .container
+        .text-center
+            h1
+                i.fa.fa-lock
+                = " Authentication"
+            a.btn.btn-default(href="/register")
+                i.fa.fa-pencil-square-o
+                = " Register"
+            = " "
+            a.btn.btn-default(href="/login")
+                i.fa.fa-sign-in
+                = " Login"
