Updated login view to handle error message

--- a/views/login.jade
+++ b/views/login.jade
@@ -7,8 +7,8 @@ block content
                 i.fa.fa-sign-in
                 = " Login"
 
-            if message !== undefined
-                .alert.alert-danger = message
+            if message !== null
+                .alert.alert-danger= message
 
             form(method="post", action="/login")
                 .form-group
