--- a/views/register.jade
+++ b/views/register.jade
@@ -7,7 +7,7 @@ block content
                 i.fa.fa-pencil-square-o
                 = " Register"
 
-            form(method="post", action="/login")
+            form(method="post", action="/register")
                 .form-group
                     label Username
                     input.form-control(type="text", name="username")
