--- a/views/profile.jade
+++ b/views/profile.jade
@@ -4,3 +4,5 @@ block content
     .container
         .col-sm-6.col-sm-offset-3
             h1= user.username
+            .text-right
+                a.btn.btn-danger(href="/logout") Logout
